# slack-dumper

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml
docs/superpowers/plans/: 2026-03-27-slack-dumper.md
slack_dumper/: auth.py  client.py  db.py  models.py  sync.py
slack_dumper/fetcher/: channels.py  files.py  messages.py  users.py
slack_dumper/viewer/: app.py
slack_dumper/viewer/static/: app.js  style.css
slack_dumper/viewer/templates/: base.html  channel.html
tests/: test_client.py  test_db.py  test_fetcher_channels.py  test_fetcher_files.py  test_fetcher_messages.py  test_sync.py
